# DX12Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DX12Renderer.sln  README.md
DX12Renderer/: DX12Renderer.vcxproj  DX12Renderer.vcxproj.filters  EntryPoint.cpp  README.md
DX12Renderer/Engine/: AppWindow.h  Main.cpp  Math.h  Utils.h
DX12Renderer/Engine/Render/: Renderer.cpp  Renderer.h  RendererUtils.h
Dependency/crosswindow/lib/: CrossWindow.lib
Workspace/Shaders/: triangle.frag.dxbc  triangle.vert.dxbc  triangle.vert.hlsl
src/: AppWindow.cpp  AppWindow.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Main.cpp  Main.h  Math.h  Renderer.cpp  Renderer.h  RendererUtils.h  Types.h  Utils.h
src/Render/: Renderer.cpp  Renderer.h
